add missing dep

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "queue": "^4.2.1",
     "simple-get": "^2.6.0",
-    "strxml": "^1.0.0"
+    "strxml": "0.0.0"
   },
   "author": "jesse.tane@gmail.com",
   "license": "MIT"
