--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Marauder net visualization",
   "scripts": {
     "build": ". ./env.sh && node index.js",
-    "debug": ". ./env.sh && node --inspect --debug-brk index.js",
+    "debug": ". ./env.sh && node --inspect --debug-brk ./src/http-server",
     "start": ". ./env.sh && node ./src/http-server"
   },
   "dependencies": {
